<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:layout_centerInParent="true"
    tools:context=".ForgotPasswordActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:src="@drawable/password_ic"
                android:tint="@color/colorPrimary"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/reset"
                android:textSize="35sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/forgot_desc"
                android:textSize="16sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextSize="14dp"
                app:met_iconLeft="@drawable/ic_mail"
                app:met_iconPadding="0dp"
                app:met_primaryColor="@color/colorPrimaryDark"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/grey_500" />

            <Button
                android:id="@+id/send_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@color/colorPrimary"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>