<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shop_bg"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_back_to_login"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/back_ic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:text="Sign Up"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="14sp"
                    app:met_iconLeft="@drawable/ic_mail"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="50"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="14sp"
                    app:met_iconLeft="@drawable/ic_person"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="50"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="10dp"
                    app:met_iconLeft="@drawable/phone_ic"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="14"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="14sp"
                    app:met_iconLeft="@drawable/lock_ic"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="50"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    app:met_singleLineEllipsis="true" />


                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout1"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/already_have_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Login_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_registration"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/terms_of_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>







    </LinearLayout>

</LinearLayout>